Add SpaCy support for PII

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,6 @@ RATE_LIMIT_MAX_REQUESTS=10 #Rate limit max requests
 DELAY=50 #Delay between requests in milliseconds
 TIMEOUT=5m #Timeout in minutes for /gettranscripts endpoint
 EXTRA_LOGS=false #Enable extra logs
+REDACT_API_URL=http://localhost:5005/redact  #SpaCy URL for the redaction API
+USE_REDACT=false #Set to true to use the redaction API
 PORT=3000 #Port to run the server on
